# backend/src/server.ts
@@ -32,7 +32,6 @@ import employeeRoutes from "./routes/employee";
 import legalRoutes from "./routes/legal";
 import reviewRoutes from "./routes/review";
 import eventRoutes from "./routes/event";
-import assetsRoutes from "./routes/assets";
 import servicesRoutes from "./routes/services";
 
 require("dotenv-flow").config();
@@ -62,7 +61,6 @@ app.use("/employee", employeeRoutes);
 app.use("/legal", legalRoutes);
 app.use("/review", reviewRoutes);
 app.use("/event", eventRoutes);
-app.use("/assets", assetsRoutes);
 app.use("/services", servicesRoutes);
 
 // Serve static files from the 'dist' directory
