# backend/swagger.yaml
@@ -108,18 +108,6 @@ components:
         message:
           type: string
 
-    Asset:
-      type: object
-      properties:
-        _id:
-          type: string
-        type:
-          type: string
-        title:
-          type: string
-        desc:
-          type: string
-
     Video:
       type: object
       properties:
@@ -603,115 +591,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Review"
-
-  /assets:
-    get:
-      summary: Fetches all assets
-      description: Retrieves a list of assets as JSON objects
-      responses:
-        200:
-          description: A list of JSON objects in an array
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Asset"
-    post:
-      summary: Create a new asset
-      description: Creates a new asset and sends it to the server for storage.
-      security:
-        - ApiKeyAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Asset"
-      responses:
-        201:
-          description: Asset created successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Asset"
-    delete:
-      summary: Delete all assets
-      description: Deletes all assets from the database
-      security:
-        - ApiKeyAuth: []
-      responses:
-        200:
-          description: All assets deleted successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-  /assets/{id}:
-    get:
-      summary: Retrieve a specific asset
-      description: Retrieves a specific asset based on its ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: Asset ID
-          schema:
-            type: string
-      responses:
-        200:
-          description: An asset in the format of a JSON object
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Asset"
-    put:
-      summary: Update a specific asset
-      description: Updates a specific asset based on its ID
-      security:
-        - ApiKeyAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: Asset ID
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Asset"
-      responses:
-        200:
-          description: Successfully updated!
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Asset"
-    delete:
-      summary: Delete a specific asset
-      description: Deletes a specific asset based on its ID
-      security:
-        - ApiKeyAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: Asset ID
-          schema:
-            type: string
-      responses:
-        200:
-          description: Successfully deleted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Asset"
 
   /videos:
     get:
